--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^4.18.2",
+        "express-validator": "^7.2.1",
+        "nodemailer": "^6.9.3",
         "pg": "^8.14.1"
     },
     "devDependencies": {
